<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="jwer.pam.ui.dialog.meter_edit.EditMeterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:minWidth="180dp"
        android:minHeight="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/measureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.measure + ``}"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/textView22" />

        <ImageButton
            android:id="@+id/lengthUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/plus"
            android:onClick="@{() -> viewModel.updateMeter(0, 1)}"
            app:layout_constraintBottom_toTopOf="@+id/lengthText"
            app:layout_constraintEnd_toEndOf="@+id/lengthText"
            app:layout_constraintStart_toStartOf="@+id/lengthText" />

        <ImageButton
            android:id="@+id/measureUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/plus"
            android:onClick="@{() -> viewModel.updateMeter(1, 0)}"
            app:layout_constraintBottom_toTopOf="@+id/measureText"
            app:layout_constraintEnd_toEndOf="@+id/measureText"
            app:layout_constraintStart_toStartOf="@+id/measureText" />

        <ImageButton
            android:id="@+id/lengthDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/minus"
            android:onClick="@{() -> viewModel.updateMeter(0, -1)}"
            app:layout_constraintEnd_toEndOf="@+id/lengthText"
            app:layout_constraintStart_toStartOf="@+id/lengthText"
            app:layout_constraintTop_toBottomOf="@+id/lengthText" />

        <ImageButton
            android:id="@+id/measureDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/minus"
            android:onClick="@{() -> viewModel.updateMeter(-1, 0)}"
            app:layout_constraintEnd_toEndOf="@+id/measureText"
            app:layout_constraintStart_toStartOf="@+id/measureText"
            app:layout_constraintTop_toBottomOf="@+id/measureText" />

        <TextView
            android:id="@+id/lengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{viewModel.length + ``}"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="/"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

