<resources>
    <string name="app_name">Practice Assistant</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_metronome">Metronome</string>
    <string name="title_rhythms">Rhythms</string>
    <string name="title_songs">Songs</string>

    <string name="nav_title_metronome">Metronome</string>
    <string name="nav_title_rhythms">Rhythms</string>
    <string name="nav_title_songs">Songs</string>

    <string name="name">Name</string>
    <string name="enter_song_name">Song name cannot be blank</string>
    <string name="bpm">BPM</string>
    <string name="meter">Meter</string>
    <string name="tempo">Tempo</string>
    <string name="no_songs_message">There are no songs yet! Tap \'+\' button to add a new song.</string>

    <string name="add_song">Add song</string>

    <string name="initial">Initial</string>
    <string name="initial_tempo">Initial tempo</string>
    <string name="enter_initial_tempo">Initial tempo cannot be blank</string>

    <string name="enter_tempo">Tempo cannot be blank</string>
    <string name="tempo_out_of_range_1">Tempo must be a number between</string>
    <string name="tempo_out_of_range_2">and</string>

    <string name="ok">OK</string>

    <string name="goal">Goal</string>
    <string name="goal_tempo">Goal tempo</string>
    <string name="enter_goal_tempo">Goal tempo cannot be blank</string>
    <string name="goal_higher_than_initial">Goal tempo cannot be lower than the initial tempo</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="rename">Rename</string>
    <string name="warning">Warning</string>
    <string name="default_name">Default</string>

    <string name="delete">Delete</string>
    <string name="delete_song">Delete song</string>
    <string name="delete_song_sure">Are you sure you want to delete the song?</string>
    <string name="delete_section">Delete section</string>
    <string name="delete_section_sure">Are you sure you want to delete the section?</string>
    <string name="delete_rhythm">Delete rhythm</string>
    <string name="delete_rhythm_sure">Are you sure you want to delete the rhythm?</string>

    <string name="edit">Edit</string>
    <string name="edit_song">Edit song</string>
    <string name="edit_rhythm">Edit rhythm</string>
    <string name="edit_section">Edit section</string>

    <string name="statistics">Statistics</string>
    <string name="days_practiced">Days practiced</string>
    <string name="progress">Progress</string>
    <string name="practice">Practice</string>
    <string name="practice_log">Practice log</string>
    <string name="no_practice_entries_message">There are no practice entries!</string>
    <string name="practice_now">Practice now</string>
    <string name="now_practicing">Now practicing:</string>

    <string name="rate_performance">Rate your performance:</string>

    <string name="undo">Undo</string>
    <string name="entry_added">Practice entry added</string>
    <string name="entry_deleted">Practice entry deleted</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>

    <string name="new_rhythm">New rhythm</string>
    <string name="rhythm_name_too_short">Rhythm name must be at least 3 characters long!</string>
    <string name="rhythm_empty">Rhythm pattern cannot be empty!</string>
    <string name="set_rhythm">Set rhythm</string>
    <string name="choose_rhythm">Choose rhythm</string>
    <string name="divide_into_sections">Divide song into sections</string>
    <string name="no_rhythm">No rhythm</string>
    <string name="no_rhythms_message">There are no rhythms yet! Tap \'+\' button to add a new rhythm.</string>
    <string name="no_rhythm_set">No rhythm set</string>
    <string name="current_rhythm">Current rhythm:</string>

    <string name="sections">Sections</string>
    <string name="enter_section_name">Section name cannot be blank</string>
    <string name="no_sections_message">Your song has no sections!</string>
    <string name="add_section">Add section</string>

    <string name="change_to_sections_warning_message">By choosing to divide song into sections
        all of the existing practice entries are going to be removed.\nAre you sure you want to
        apply changes?</string>
    <string name="change_to_no_sections_warning_message">By choosing not to divide song into sections
        all of the existing practice entries and sections are going to be removed.\nAre you sure you want to
        apply changes?</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_rhythm_warning_message">If you leave all of the changes are going to be lost. Do you want to save the rhythm before leaving?</string>

</resources>
